--- a/ComputerSecurity/ComputerSecurity.csproj
+++ b/ComputerSecurity/ComputerSecurity.csproj
@@ -52,6 +52,7 @@
     <Compile Include="MainWindow.Designer.cs">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="Playfair.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="MainWindow.resx">
