Vigenere: Repeating-key and auto-key methods...
...for both encryption and decryption. Type (repeating-key or auto-key)
can be sent in the encrypt/decrypt methods as a parameter of public enum
type 'VigenereType'.

--- a/ComputerSecurity/ComputerSecurity.csproj
+++ b/ComputerSecurity/ComputerSecurity.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Playfair.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vigenere.cs" />
     <EmbeddedResource Include="MainWindow.resx">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </EmbeddedResource>
