--- a/CipherBase/CipherBase.csproj
+++ b/CipherBase/CipherBase.csproj
@@ -40,10 +40,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Ceasar.cs" />
+    <Compile Include="Colum.cs" />
+    <Compile Include="Des.cs" />
+    <Compile Include="EncType.cs" />
     <Compile Include="Helpers.cs" />
+    <Compile Include="HillCipher.cs" />
     <Compile Include="MD5.cs" />
+    <Compile Include="MonoAlpha.cs" />
     <Compile Include="Playfair.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RailFence.cs" />
     <Compile Include="RC4.cs" />
     <Compile Include="Vigenere.cs" />
   </ItemGroup>
