--- a/CipherBase/CipherBase.csproj
+++ b/CipherBase/CipherBase.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RailFence.cs" />
     <Compile Include="RC4.cs" />
+    <Compile Include="TripleDes.cs" />
     <Compile Include="Vigenere.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
